--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,13 +2,15 @@
   <section>
     <h5>NECESITAS AYUDA?</h5>
     <hr />
-    <a routerLink="/support">Contacta con el soporte técnico</a>
-    <a href="/terms">Términos y condiciones</a>
+    <a routerLink="/support" routerLinkActive="active"
+      >Contacta con el soporte técnico</a
+    >
+    <a href="/terms" routerLinkActive="active">Términos y condiciones</a>
   </section>
   <section>
     <h5>SOBRE NOSOTROS</h5>
     <hr />
-    <a routerLink="/about-us">Conoce al equipo</a>
+    <a routerLink="/about-us" routerLinkActive="active">Conoce al equipo</a>
   </section>
   <section>
     <h5>SIGUENOS</h5>
