creado desplegable del header y ajustes a not found

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <a routerLink="/support" routerLinkActive="active"
       >Contacta con el soporte técnico</a
     >
-    <a href="/terms" routerLinkActive="active">Términos y condiciones</a>
+    <a routerLink="/terms" routerLinkActive="active">Términos y condiciones</a>
   </section>
   <section>
     <h5>SOBRE NOSOTROS</h5>
