--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,4 @@
 <div>
-  <img
-    src="https://cataas.com/cat/says/404%20Not%20Found?fontSize=40&fontColor=red"
-  />
+  <span>404 Not Found</span>
+  <img src="https://cataas.com/cat" />
 </div>
