--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,9 +2,28 @@
   <app-icon id="hamburguer" type="hamburguer" (click)="toggleNav()" />
   <div id="profile--overview">
     <span>{{ user.money }} €</span>
-    <a routerLink="/profile">
-      <img [src]="user.imageUrl" alt="perfil" />
-    </a>
+    <img (click)="toggleDropdown()" [src]="user.imageUrl" alt="perfil" />
+    <div id="dropdown" class="hidden slide-in-top">
+      <a
+        (click)="toggleDropdown()"
+        routerLink="/profile"
+        routerLinkActive="active"
+        >Perfil</a
+      >
+      <a
+        (click)="toggleDropdown()"
+        routerLink="/wallet"
+        routerLinkActive="active"
+        >Cartera</a
+      >
+      <a
+        (click)="toggleDropdown()"
+        class="less"
+        routerLink="/logout"
+        routerLinkActive="active"
+        >Cerrar sesión</a
+      >
+    </div>
   </div>
   <nav class="hidden">
     <div id="nav--header">
@@ -23,18 +42,6 @@
           routerLink="/notifications"
           routerLinkActive="active"
           >Notificaciones</a
-        >
-      </li>
-      <li class="link">
-        <a (click)="closeNav()" routerLink="/wallet" routerLinkActive="active"
-          >Monedero</a
-        >
-      </li>
-    </ul>
-    <ul id="down" class="links">
-      <li class="link">
-        <a (click)="closeNav()" routerLink="/logout" routerLinkActive="active"
-          >Cerrar sesión</a
         >
       </li>
     </ul>
