--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -1,13 +1,21 @@
 div {
-  width: 100%;
-  height: calc(100vh - 100px);
+  max-width: 100vw;
+  padding: 32px 0;
   display: grid;
   place-items: center;
+  overflow: hidden;
 }
 
 img {
-  height: 300px;
-  max-width: 500px;
-  border-radius: 8px;
+  width: auto;
+  height: calc(100vh - 300px);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+}
+
+span {
+  font-size: 5rem;
+  font-weight: 700;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
