--- a/src/styles.css
+++ b/src/styles.css
@@ -122,3 +122,13 @@ a:visited {
 .hidden {
   display: none !important;
 }
+
+.desktop--only {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .mobile--only {
+    display: none !important;
+  }
+}
