--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -1,1 +1,9 @@
-<p>wallet works!</p>
+<main>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <h1>Wallet</h1>
+      </div>
+    </div>
+  </div>
+</main>
