notification css hecho

--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -1,1 +1,7 @@
-<p>notifications works!</p>
+<main>
+  <app-notification></app-notification>
+  <app-notification></app-notification>
+  <app-notification></app-notification>
+  <app-notification></app-notification>
+  <app-notification></app-notification>
+</main>
