notifications casi terminado

--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,7 +1,7 @@
 <article>
   <div>
-    <h5>Notificacion</h5>
-    <p>11/01/2024</p>
+    <h5>{{ notification.subject }}</h5>
+    <p>{{ notification.sendOn }}</p>
   </div>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  <p>{{ notification.message }}</p>
 </article>
