--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -1,7 +1,12 @@
 <main>
-  <app-notification></app-notification>
-  <app-notification></app-notification>
-  <app-notification></app-notification>
-  <app-notification></app-notification>
-  <app-notification></app-notification>
+  @for (notification of notifications; track notification.id) {
+  <app-notification [notification]="notification"></app-notification>
+  }@empty {
+  <p>Sin notificaciones</p>
+  }
+  <!-- <app-notification
+    *ngFor="let notification of notifications"
+    [notification]="notification"
+  ></app-notification>
+  -->
 </main>
