notificaciones casi terminado PERO SIGUE SIN IR

--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -1,12 +1,7 @@
 <main>
-  @for (notification of notifications; track notification.id) {
+  @for (notification of notifications; track notification.notificationId) {
   <app-notification [notification]="notification"></app-notification>
   }@empty {
   <p>Sin notificaciones</p>
   }
-  <!-- <app-notification
-    *ngFor="let notification of notifications"
-    [notification]="notification"
-  ></app-notification>
-  -->
 </main>
