--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -1,5 +1,5 @@
 <main>
-  @for (notification of notifications; track notification.notificationId) {
+  @for (notification of notificationsU; track notification.notificationId) {
   <app-notification [notification]="notification"></app-notification>
   }@empty {
   <p>Sin notificaciones</p>
