cambiado el nombre de auction a liveAuction y añadido auction (las del home)

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,10 @@
 <main>
-  <p>home works!</p>
+  <section>
+    <div>
+      <app-auction></app-auction>
+    </div>
+  </section>
+  <section>
+    <div></div>
+  </section>
 </main>
