--- a/src/app/components/auction/auction.component.html
+++ b/src/app/components/auction/auction.component.html
@@ -6,6 +6,7 @@
     <div>
       <!--REVISAR    auction solo tiene el userId, no el nombre-->
       <small>{{ auction.userId }}</small>
+      <!--Esto también hay que revisarlo-->
       <span class="live">En directo</span>
     </div>
     <span>{{ auction.initialPrice }}</span>
