--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,6 +1,7 @@
 <article>
   <div>
     <h5>{{ notification.subject }}</h5>
+    <!-- formatear la fecha -->
     <p>{{ notification.sendOn }}</p>
   </div>
   <p>{{ notification.message }}</p>
