--- a/src/app/components/auction/auction.component.html
+++ b/src/app/components/auction/auction.component.html
@@ -4,8 +4,7 @@
   <div>
     <h3>{{ auction.auctionName }}</h3>
     <div>
-      <!--REVISAR    auction solo tiene el userId, no el nombre-->
-      <small>{{ auction.userId }}</small>
+      <small>{{ user.userName }}</small>
       <!--Esto también hay que revisarlo-->
       <span class="live">En directo</span>
     </div>
