--- a/src/app/components/auction/auction.component.html
+++ b/src/app/components/auction/auction.component.html
@@ -4,7 +4,7 @@
   <div>
     <h3>{{ auction.auctionName }}</h3>
     <div>
-      <small>{{ user.userName }}</small>
+      <small>{{ userName }}</small>
       <!--Esto también hay que revisarlo-->
       <span class="live">En directo</span>
     </div>
