live AUCTIONS con clase en directo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-@switch (user.role) { @case (2) {
+@switch (user.roleId) { @case (2) {
 <h1>Admin</h1>
 } @default {
 <app-user-layout [user]="user">
