--- a/src/app/components/auction/auction.component.css
+++ b/src/app/components/auction/auction.component.css
@@ -13,6 +13,10 @@ article > img {
 
 article h3 {
   font-weight: 600;
+  text-overflow: ellipsis;
+  height: 33.17px;
+  white-space: pre;
+  overflow: hidden;
 }
 
 article > div {
