--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -8,7 +8,7 @@ section {
   display: block;
 }
 
-main > section > div {
+main section > div {
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
