home subastas en directo filtradas

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -14,3 +14,6 @@ main section > div {
   white-space: nowrap;
   -ms-overflow-style: none; /* para firefox */
 }
+main section > div > *:not(:last-child) {
+  margin-right: 8px;
+}
