--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <app-icon id="hamburguer" type="hamburguer" (click)="toggleNav()" />
   <div id="profile--overview">
     <span>{{ user.money }} €</span>
-    <img (click)="toggleDropdown()" [src]="user.imageUrl" alt="perfil" />
+    <img (click)="toggleDropdown()" [src]="imageUrl" alt="perfil" />
     <div id="dropdown" class="hidden slide-in-top">
       <a
         (click)="toggleDropdown()"
