--- a/src/app/layouts/user-layout/user-layout.component.html
+++ b/src/app/layouts/user-layout/user-layout.component.html
@@ -1,3 +1,5 @@
+@if (user) {
 <app-header [links]="links" [user]="user"></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+}
