implementados casos de uso de inicio de sesión y cierre de sesión

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 @if (user) {
-<app-user-layout [user]="user">
-  <router-outlet></router-outlet>
-</app-user-layout>
+<app-user-layout [user]="user"> </app-user-layout>
 } @else {
 <app-login></app-login>
 }
