--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
         >Cartera</a
       >
       <a
-        (click)="toggleDropdown()"
+        (click)="logout()"
         class="less"
         routerLink="/logout"
         routerLinkActive="active"
