eliminada redireccion de logout

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,13 +16,7 @@
         routerLinkActive="active"
         >Cartera</a
       >
-      <a
-        (click)="logout()"
-        class="less"
-        routerLink="/logout"
-        routerLinkActive="active"
-        >Cerrar sesión</a
-      >
+      <a (click)="logout()" class="less">Cerrar sesión</a>
     </div>
   </div>
   <nav class="hidden">
