--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,57 @@
+<div class="background"></div>
 <main>
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <label>
-      Nombre de usuario
-      <input type="text" name="username" formControlName="username" />
-    </label>
-    <label>
-      Contraseña
-      <input type="password" name="password" formControlName="password" />
-    </label>
-    <button>Iniciar sesión</button>
-  </form>
+  <mat-tab-group>
+    <mat-tab label="Iniciar sesión">
+      <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre de usuario</mat-label>
+          <input matInput formControlName="username" />
+          <mat-hint></mat-hint>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Contraseña</mat-label>
+          <input type="password" matInput formControlName="password" />
+          <mat-hint></mat-hint>
+        </mat-form-field>
+        <button mat-raised-button color="primary">Iniciar sesión</button>
+      </form>
+    </mat-tab>
+    <mat-tab label="Registrarse">
+      <form [formGroup]="registerForm" (ngSubmit)="onRegister()">
+        <div>
+          <mat-form-field appearance="outline">
+            <mat-label>Nombre</mat-label>
+            <input formControlName="firstName" matInput required />
+            <mat-hint></mat-hint>
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Apellidos</mat-label>
+            <input formControlName="lastName" matInput required />
+            <mat-hint></mat-hint>
+          </mat-form-field>
+        </div>
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre de usuario</mat-label>
+          <input matInput formControlName="userName" />
+          <mat-hint></mat-hint>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Email</mat-label>
+          <input formControlName="email" matInput />
+          <mat-hint></mat-hint>
+        </mat-form-field>
+        <div>
+          <mat-form-field appearance="outline">
+            <mat-label>Contraseña</mat-label>
+            <input formControlName="password" matInput type="password" />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Repite la contraseña</mat-label>
+            <input formControlName="repeatPassword" matInput type="password" />
+          </mat-form-field>
+        </div>
+        <button mat-raised-button color="primary">Registrarse</button>
+      </form>
+    </mat-tab>
+  </mat-tab-group>
 </main>
