ahora se validan los formularios de registro

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -21,33 +21,48 @@
         <div>
           <mat-form-field appearance="outline">
             <mat-label>Nombre</mat-label>
-            <input formControlName="firstName" matInput required />
-            <mat-hint></mat-hint>
+            <input formControlName="firstName" matInput />
+            @if (registerForm.controls.firstName.invalid) {
+            <mat-error>{{ getFirstNameErrorMessage() }}</mat-error>
+            }
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Apellidos</mat-label>
-            <input formControlName="lastName" matInput required />
-            <mat-hint></mat-hint>
+            <input formControlName="lastName" matInput />
+            @if (registerForm.controls.lastName.invalid) {
+            <mat-error>{{ getLastNameErrorMessage() }}</mat-error>
+            }
           </mat-form-field>
         </div>
         <mat-form-field appearance="outline">
           <mat-label>Nombre de usuario</mat-label>
           <input matInput formControlName="userName" />
-          <mat-hint></mat-hint>
+          @if (registerForm.controls.userName.invalid) {
+          <mat-error>{{ getUserNameErrorMessage() }}</mat-error>
+          }
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
           <input formControlName="email" matInput />
+          @if (registerForm.controls.email.invalid) {
+          <mat-error>{{ getEmailErrorMessage() }}</mat-error>
+          }
           <mat-hint></mat-hint>
         </mat-form-field>
         <div>
           <mat-form-field appearance="outline">
             <mat-label>Contraseña</mat-label>
             <input formControlName="password" matInput type="password" />
+            @if (registerForm.controls.password.invalid) {
+            <mat-error>{{ getPasswordErrorMessage() }}</mat-error>
+            }
           </mat-form-field>
           <mat-form-field appearance="outline">
             <mat-label>Repite la contraseña</mat-label>
             <input formControlName="repeatPassword" matInput type="password" />
+            @if (registerForm.controls.repeatPassword.invalid) {
+            <mat-error>{{ getRepeatPasswordErrorMessage() }}</mat-error>
+            }
           </mat-form-field>
         </div>
         <button mat-raised-button color="primary">Registrarse</button>
