--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -34,21 +34,27 @@ input {
 }
 
 main {
+  padding-top: 32px;
   margin: 100px auto;
   width: 100%;
-  max-width: 700px;
+  max-width: 500px;
   background-color: whitesmoke;
   z-index: 100000;
   border-radius: 10px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
+mat-error {
+  font-size: 0.8rem;
+}
+
 form {
-  padding: 16px 8px;
+  padding: 32px;
 }
 
 form > * {
   width: 100%;
+  margin-bottom: 16px;
 }
 
 form > div {
