--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,6 +1,7 @@
 :host {
   height: 100vh;
   display: grid;
+  grid-template-rows: 70px 1fr;
   place-items: start;
   min-width: 300px;
   background-image: url(../../../assets/bg.webp);
@@ -19,8 +20,10 @@
 }
 
 header {
+  grid-row: 1;
   width: 100%;
   background-color: var(--color-primary-1);
+  z-index: 100000;
 }
 
 header h1 {
@@ -52,7 +55,7 @@ form {
   padding: 32px;
 }
 
-form > * {
+form mat-form-field {
   width: 100%;
   margin-bottom: 16px;
 }
@@ -64,7 +67,6 @@ form > div {
 
 @media screen and (max-width: 500px) {
   :host {
-    align-items: flex-start;
     background-image: none;
   }
   .background {
@@ -75,6 +77,7 @@ form > div {
   }
   main {
     margin: 20px auto;
+    padding: 0;
     border-radius: 0;
     box-shadow: none;
   }
