--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,12 +7,13 @@
         <mat-form-field appearance="outline">
           <mat-label>Nombre de usuario</mat-label>
           <input matInput formControlName="username" />
-          <mat-hint></mat-hint>
         </mat-form-field>
         <mat-form-field appearance="outline">
           <mat-label>Contraseña</mat-label>
           <input type="password" matInput formControlName="password" />
-          <mat-hint></mat-hint>
+          @if (!isLogged) {
+          <mat-error>Usuario o contraseña incorrectos</mat-error>
+          }
         </mat-form-field>
         <button mat-raised-button color="primary">Iniciar sesión</button>
       </form>
