--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -1,9 +1,64 @@
 <main>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1>Wallet</h1>
-      </div>
-    </div>
-  </div>
+  <mat-tab-group>
+    <mat-tab label="Ingresar">
+      <form>
+        <label for="">Codigo promocional</label>
+        <input type="text" />
+        <button>Aceptar</button>
+      </form>
+
+      <form action="" class="dinero--card">
+        <p>Selecciona un método de ingreso:</p>
+        <label>
+          <span class="hidden">Paypal</span>
+          <input id="paypal" type="radio" name="metodo" value="paypal" />
+          <img src="assets/icons/paypal.png" alt="paypal" />
+        </label>
+        <label>
+          <span class="hidden">Visa</span>
+          <input id="visa" type="radio" name="metodo" value="visa" />
+          <img src="assets/icons/visa.webp" alt="" />
+        </label>
+        <label>
+          <span class="hidden">Mastercard</span>
+          <input
+            id="mastercard"
+            type="radio"
+            name="metodo"
+            value="mastercard"
+          />
+          <img src="assets/icons/mastercard.png" alt="mastercard" />
+        </label>
+        <button>Ingresar</button>
+      </form>
+    </mat-tab>
+    <mat-tab label="Retirar">
+      <main class="main--fit">
+        <form action="" class="dinero--card">
+          <p>Selecciona un método de retirada:</p>
+          <label>
+            <span class="hidden">Paypal</span>
+            <input id="paypal" type="radio" name="metodo" value="paypal" />
+            <img src="assets/icons/paypal.png" alt="paypal" />
+          </label>
+          <label>
+            <span class="hidden">Visa</span>
+            <input id="visa" type="radio" name="metodo" value="visa" />
+            <img src="assets/icons/visa.webp" alt="" />
+          </label>
+          <label>
+            <span class="hidden">Mastercard</span>
+            <input
+              id="mastercard"
+              type="radio"
+              name="metodo"
+              value="mastercard"
+            />
+            <img src="assets/icons/mastercard.png" alt="mastercard" />
+          </label>
+          <button>Retirar</button>
+        </form>
+      </main></mat-tab
+    >
+  </mat-tab-group>
 </main>
