coge imagenes de usuario y subasta

--- a/src/app/components/auction/auction.component.html
+++ b/src/app/components/auction/auction.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/auction/{{ auction.auctionId }}" routerLinkActive="active">
   <article>
-    <img src="{{ auction.imageUrl }}" alt="imagen subasta" />
+    <img src="{{ imageUrl }}" alt="imagen subasta" />
     <div>
       <h3>{{ auction.auctionName }}</h3>
       <div>
