--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -47,8 +47,10 @@ main {
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-mat-error {
+mat-error,
+mat-hint {
   font-size: 0.8rem;
+  color: var(--error);
 }
 
 form {
