monedero layout terminado

--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -12,12 +12,12 @@
         <label>
           <span class="hidden">Paypal</span>
           <input id="paypal" type="radio" name="metodo" value="paypal" />
-          <img src="assets/icons/paypal.png" alt="paypal" />
+          <img src="./assets/paypal.png" alt="paypal" />
         </label>
         <label>
           <span class="hidden">Visa</span>
           <input id="visa" type="radio" name="metodo" value="visa" />
-          <img src="assets/icons/visa.webp" alt="" />
+          <img src="./assets/visa.webp" alt="" />
         </label>
         <label>
           <span class="hidden">Mastercard</span>
@@ -27,7 +27,7 @@
             name="metodo"
             value="mastercard"
           />
-          <img src="assets/icons/mastercard.png" alt="mastercard" />
+          <img src="./assets/mastercard.png" alt="mastercard" />
         </label>
         <button>Ingresar</button>
       </form>
@@ -39,12 +39,12 @@
           <label>
             <span class="hidden">Paypal</span>
             <input id="paypal" type="radio" name="metodo" value="paypal" />
-            <img src="assets/icons/paypal.png" alt="paypal" />
+            <img src="./assets/paypal.png" alt="paypal" />
           </label>
           <label>
             <span class="hidden">Visa</span>
             <input id="visa" type="radio" name="metodo" value="visa" />
-            <img src="assets/icons/visa.webp" alt="" />
+            <img src="./assets/visa.webp" alt="" />
           </label>
           <label>
             <span class="hidden">Mastercard</span>
@@ -54,7 +54,7 @@
               name="metodo"
               value="mastercard"
             />
-            <img src="assets/icons/mastercard.png" alt="mastercard" />
+            <img src="./assets/mastercard.png" alt="mastercard" />
           </label>
           <button>Retirar</button>
         </form>
