--- a/src/app/pages/wallet/wallet.component.css
+++ b/src/app/pages/wallet/wallet.component.css
@@ -21,6 +21,10 @@ form input[type="text"] {
   border: 0.2px solid;
 }
 
+form input[type="text"]:focus {
+  border: 0.2px solid;
+}
+
 form label {
   font-family: Quicksand, sans-serif;
   font-weight: bold;
@@ -28,13 +32,14 @@ form label {
 
 form > button {
   margin: 0 auto;
-  width: 100px;
-  height: 45px;
+  width: 160px;
+  height: 55px;
   border-radius: 10px;
   background-color: var(--color-primary-1);
   color: whitesmoke;
   font-family: Quicksand, sans-serif;
   border: 0.5px solid;
+  font-size: 1em;
   font-weight: bold;
 }
 .dinero--card {
@@ -45,10 +50,11 @@ form > button {
   gap: 50px;
   padding: 10px 20px 20px 20px;
   border-radius: 16px;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 10px 0px rgba(0.15, 0, 0, 0.15);
+  background-color: white;
 
   & > label {
-    width: 100px;
+    width: 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
