--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -1,9 +1,11 @@
 <main>
   <mat-tab-group>
     <mat-tab label="Ingresar">
-      <form>
-        <label for="">Codigo promocional</label>
-        <input type="text" />
+      <form [formGroup]="ingresoForm" (ngSubmit)="onIngreso()">
+        <mat-form-field appearance="outline">
+          <mat-label>Codigo promocional</mat-label>
+          <input matInput formControlName="codigo" />
+        </mat-form-field>
         <button>Aceptar</button>
       </form>
 
@@ -32,9 +34,10 @@
         <button>Ingresar</button>
       </form>
     </mat-tab>
+
     <mat-tab label="Retirar">
       <main class="main--fit">
-        <form action="" class="dinero--card">
+        <form class="dinero--card">
           <p>Selecciona un método de retirada:</p>
           <label>
             <span class="hidden">Paypal</span>
