--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,6 +43,13 @@
           routerLinkActive="active"
           >Notificaciones</a
         >
+        <li class="link">
+          <a
+            (click)="closeNav()"
+            routerLink="/categories"
+            routerLinkActive="active"
+            >Categorias</a
+          >
       </li>
     </ul>
   </nav>
